Slider overlay text

--- a/Pagina remax/assets/styles/styleSheetRemax.css
+++ b/Pagina remax/assets/styles/styleSheetRemax.css
@@ -29,10 +29,7 @@ header img{
     width: 100%;
 }
 header div.hh{
-    padding-top: 3em;
-    padding-bottom: 2em;
-    padding-left: 4em;
-    padding-right: 0em;
+    padding-top: 18%
 }
 header a{
     color:#1e3054;font-size: 13px;
