--- a/Pagina remax/assets/styles/styleSheetRemax.css
+++ b/Pagina remax/assets/styles/styleSheetRemax.css
@@ -39,6 +39,7 @@ header a{
     background-color: #dbdbdb;
     color:#1e3054;
     text-align: center;
+    padding-bottom: 3em;
 }
 .teams img{
     margin-left: 2em;
