--- a/Pagina remax/assets/styles/styleSheetRemax.css
+++ b/Pagina remax/assets/styles/styleSheetRemax.css
@@ -34,129 +34,64 @@ header div.hh{
 header a{
     color:#1e3054;font-size: 13px;
 }
-
 .teams {
     background-color: #dbdbdb;
     color:#1e3054;
     text-align: center;
     padding-bottom: 3em;
-}
-.teams img{
+}.teams img{
     margin-left: 2em;
     border-radius: 100%;
-}
-.teams h2{
+}.teams h2{
     color:#1e3054;
     font-size:30px;
     font-weight: bold;
     text-align: center;
-}
-article.agent {
+}article.agent {
     display: inline-block;
 }
-
 .perfil {
     background-color: #1e3054;
     color:#dbdbdb;
     text-align: center;
     padding-bottom: 7em;
-}
-.perfil h2{
+}.perfil h2{
     font-size: 20px;
     color:#FFFFFF;
     font-size:30px;
     font-weight: bold;
     text-align: center;
     padding:0.8em
+}article.perfil {
+    padding-left:10em;
+    display: inline-block;
+}
+.porque {
+    background-color: #FFFFFF;
+    color:#dbdbdb;
+    text-align: center;
+}.porque h1{
+    margin-top: 2.5em;
+    font-size: 39px;
+    font-weight: bolder;
+    color: rgba(40, 58, 98, 1);
+    
+}
+.porque h2{
+    text-align: left;
+    margin-left: 20%;
+    margin-top: 10%;
+    width: 325px;
+    font-size: 19px;
+    font-weight: lighter;
+    color: white;
+    border-left: 3px solid #FFFFFF;
+    padding-left: 0.5em;
 }
 article.perfil {
     padding-left:10em;
     display: inline-block;
 }
-.porque{
-    padding-top: 0.5em;
-    background-color: #FFFFFF;
-    position: relative;
-    height: 769px;
-}
-.porque overlay{
-    position: relative;
-    display: none;
-    width: 50%;
-    height: 769px;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(138, 202, 255, 1);
-    display: block;
-  }
-
-.porque text{
-    padding-left: 0.5em;
-    width: 375px;
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    font-size: xx-large;
-    font-weight: bolder;
-    color: rgba(40, 58, 98, 1);
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-  }
-.porque text2{
-    margin: 0em;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    width: 325px;
-    font-size: 19px;
-    color: white;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    border-left: 3px solid #FFFFFF;
-    padding-left: 0.5em;
-}.porque imageGlobo{
-    position: relative;
-    display: none;
-    top: 3%;
-    width: 20%;
-    left: 150%;
-    right: 0;
-    bottom: 0;
-    display: block;
-} .porque imagePQ{
-    position: relative;
-    display: none;
-    top: 7%;
-    left: 97%;
-    right: 0;
-    bottom: 0;
-    display: block;
-} 
-
-.btn {
-    padding: 12.5px;
-    font-weight: bold;
-}
-
-.-block {
-    width: 100%;
-}
-
-.-primary {
-    background-color: black;
-    color: white;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-}
-
-.-secondary {
-    background-color: white;
-    color: black;
-    border: 1px solid #000000;
-}
-
 footer {
     background: #d51e30;
     padding: 20px 0;
@@ -165,7 +100,7 @@ footer p {
     font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
     text-decoration: none;
-    line-height: 0.3em;
+    line-height: 5px;
     font-size: 18px;
 }
 
