Solucion errores responsive

--- a/Pagina remax/assets/styles/styleSheetRemax.css
+++ b/Pagina remax/assets/styles/styleSheetRemax.css
@@ -29,7 +29,8 @@ header img{
     width: 100%;
 }
 header div.hh{
-    padding-top: 18%
+    padding-top: 30%;
+    
 }
 header a{
     color:#1e3054;font-size: 13px;
