--- a/Pagina remax/assets/styles/styleSheetRemax.css
+++ b/Pagina remax/assets/styles/styleSheetRemax.css
@@ -2,6 +2,7 @@
 box-sizing: border-box;
 margin: 0;
 padding: 0;
+font-family: 'Montserrat';
 }
 html {
     scroll-behavior: smooth;
@@ -16,18 +17,14 @@ body h1{
     font-weight: bold;
     text-align: center;
     padding:0.8em;
-    font-family: 'Montserrat Alternates'; 
 }
 body h2{
-    font-family: 'Montserrat Alternates'; 
 }
 body A {
-    font-family: 'Montserrat Alternates'; 
     color: white;
     text-decoration: none;
 }
 body p {
-    font-family: 'Montserrat Alternates';
     color: white;
     text-decoration: none;
     font-size: 18px;
@@ -132,7 +129,6 @@ article.propuesta {
     font-size:30px;
     font-weight: bold;
     text-align: center;
-    font-family: 'Montserrat Alternates'; 
     color :white;
     padding-bottom: 0em;
 }
@@ -140,13 +136,11 @@ article.propuesta {
     font-size: 18px;
     font-weight: lighter;
     text-align: center;
-    font-family: 'Montserrat Alternates'; 
     color :white
 }
 .postulate label{
     font-size: 13px;
     font-weight: lighter;
-    font-family: 'Montserrat Alternates'; 
     color :white;
     
     padding-top: 3em;
@@ -176,7 +170,6 @@ article.propuesta {
     color: white;
     text-decoration: none;
     font-size: 18px;
-    font-family: 'Montserrat Alternates';
     cursor: pointer;
 }
 .postulate ::placeholder{
@@ -189,7 +182,6 @@ footer h1 {
     font-size:30px;
     font-weight: bold;
     text-align: center;
-    font-family: 'Montserrat Alternates'; 
     color :white;
     padding-bottom: 0em;
 }
@@ -197,7 +189,6 @@ footer h3 {
     font-size: 18px;
     font-weight: lighter;
     text-align: center;
-    font-family: 'Montserrat Alternates'; 
     color :white
 }
 footer p {
