--- a/Pagina remax/assets/styles/styleSheetRemax.css
+++ b/Pagina remax/assets/styles/styleSheetRemax.css
@@ -69,7 +69,7 @@ img.sliderimg{
     color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     padding: 1em;
     width: auto;
 }
